# sage-tui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  logging.conf  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: release.yml
.github_temp/workflows/: ci.yml
docs/: architecture.md
docs/plans/: 2026-03-03-background-tasks-planning-notepad-routing-design.md  2026-03-03-background-tasks-planning-notepad-routing.md
sage_tui/: __init__.py  __main__.py  app.py  app.tcss  cli.py  helpers.py  instrumentation.py  messages.py  modals.py  widgets.py
tests/: conftest.py  test_app.py  test_cli.py  test_instrumentation.py  test_messages.py
