[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sage-tui"
version = "0.1.0"
description = "Interactive TUI for Sage AI agent"
authors = [
    {name = "Sage Choi", email = "iamsagebynature@gmail.com"}
]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "sage-agent>=1.3.0",
    "textual>=0.50",
    "click>=8.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1.0",
    "ruff>=0.5",
]

[project.scripts]
sage-tui = "sage_tui.cli:main"

[tool.uv.sources]
sage-agent = { path = "../sage-agent", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = "sage.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
